--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+    <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
@@ -64,6 +65,120 @@
         </div>
       </div>
     </nav>
+    <!-- Restaurant title, subtitle -->
+    <div id="top" class="starter_container bg">
+      <div class="follow_container">
+        <div class="col-md-6 col-md-offset-3">
+          <h2 class="top-title">Restaurant</h2>
+          <h2 class="white second-title">" Best in the city "</h2>
+          <hr />
+        </div>
+      </div>
+    </div>
+    <!-- About Us -->
+    <section id="story" class="description_content">
+      <div class="text-content container">
+        <div class="col-md-6">
+          <h1>About us</h1>
+          <div class="fa fa-cutlery fa-2x"></div>
+          <p class="desc-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s
+            with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
+        <hr />
+        <div class="col-md-6">
+          <div class="img-section">
+            <img src="images/kabob.jpg" width="250" height="220" />
+            <img src="images/limes.jpg" width="250" height="220" />
+            <div class="img-section-space"></div>
+            <img src="images/radish.jpg" width="250" height="220" />
+            <img src="images/corn.jpg" width="250" height="220" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Menu -->
+    <section id="pricing" class="description_content">
+      <div class="pricing background_content">
+        <h1><span>Affordable</span> pricing</h1>
+      </div>
+      <div class="text-content container">
+        <div class="container">
+          <div class="row">
+            <div id="w">
+              <ul id="filter-list" class="clearfix">
+                <li class="filter" data-filter="all">All</li>
+                <li class="filter" data-filter="appetizers">Appetizers</li>
+                <li class="filter" data-filter="main course">Main Course</li>
+                <li class="filter" data-filter="desert">Desert</li>
+                <li class="filter" data-filter="drinks">Drinks</li>
+              </ul>
+              <!-- @end #filter-list -->
+              <ul id="portfolio">
+                <li class="item appetizers">
+                  <img src="images/food_icon01.jpg" alt="Food" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item main course">
+                  <img src="images/food_icon02.jpg" alt="Food" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item main course">
+                  <img src="images/food_icon03.jpg" alt="Food" />
+                  <h2 class="white">$18</h2>
+                </li>
+                <li class="item appetizers">
+                  <img src="images/food_icon04.jpg" alt="Food" />
+                  <h2 class="white">$15</h2>
+                </li>
+                <li class="item appetizers">
+                  <img src="images/food_icon05.jpg" alt="Food" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item main course">
+                  <img src="images/food_icon06.jpg" alt="Food" />
+                  <h2 class="white">$22</h2>
+                </li>
+                <li class="item desert">
+                  <img src="images/food_icon07.jpg" alt="Food" />
+                  <h2 class="white">$32</h2>
+                </li>
+                <li class="item desert">
+                  <img src="images/food_icon08.jpg" alt="Food" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item desert">
+                  <img src="images/food_icon08.jpg" alt="Food" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item drinks">
+                  <img src="images/food_icon08.jpg" alt="Food" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item drinks">
+                  <img src="images/food_icon08.jpg" alt="Food" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item drinks">
+                  <img src="images/food_icon08.jpg" alt="Food" />
+                  <h2 class="white">$38</h2>
+                </li>
+              </ul>
+              <!-- @end #portfolio -->
+            </div>
+            <!-- @end #w -->
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
