--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Restaurant</a>
+            <a class="navactive navbar-brand" href="index.html">Restaurant</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -44,21 +44,21 @@
             </button>
           </div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="nav navbar-nav main-nav clear navbar-right">
               <li class="nav-item">
-                <a class="nav-link" href="#">about</a>
+                <a class="color_animation" href="#">about</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">menu</a>
+                <a class="color_animation" href="#">menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">drinks</a>
+                <a class="color_animation" href="#">drinks</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">reservation</a>
+                <a class="color_animation" href="#">reservation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">contact us</a>
+                <a class="color_animation" href="#">contact us</a>
               </li>
             </ul>
           </div>
