--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
 
   <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-default navbar-fixed-top" role="navigation">
+    <nav
+      class="navbar navbar-expand-lg navbar-default navbar-fixed-top"
+      role="navigation"
+    >
       <div class="container">
         <div class="row">
           <div class="navbar-header">
             <a class="navactive navbar-brand" href="index.html">Restaurant</a>
             <button
-              class="navbar-toggler"
+              class="navbar-toggle collapsed"
               type="button"
               data-toggle="collapse"
               data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
