agregados media queries, y alguna configuracion de el nav

--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@
 
   <body>
     <!-- Nav bar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-default navbar-fixed-top"
-      role="navigation"
-    >
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
           <div class="navbar-header">
-            <a class="navactive navbar-brand" href="index.html">Restaurant</a>
+            <a class="navbar-brand" href="index.html">Restaurant</a>
             <button
               class="navbar-toggle collapsed"
               type="button"
