navbar parcialmente terminada

--- a/index.html
+++ b/index.html
@@ -26,13 +26,47 @@
 
   <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand" href="index.html">Restaurant</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">about</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Drinks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Reservations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">Restaurant</a>
             <button
-              class="navbar-toggle collapsed"
+              class="navbar-toggler collapsed"
               type="button"
               data-toggle="collapse"
               data-target="#navbarSupportedContent"
@@ -64,7 +98,7 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- Restaurant title, subtitle -->
     <div id="top" class="starter_container bg">
       <div class="follow_container">
