--- a/index.html
+++ b/index.html
@@ -27,82 +27,48 @@
   <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <a class="navbar-brand" href="index.html">Restaurant</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">about</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Drinks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Reservations</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Restaurant</a>
-            <button
-              class="navbar-toggler collapsed"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-            >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
+          <a class="navbar-brand" href="index.html">Restaurant</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarTogglerDemo02"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav main-nav clear navbar-right">
-              <li class="nav-item">
+              <li>
                 <a class="color_animation" href="#">about</a>
               </li>
-              <li class="nav-item">
-                <a class="color_animation" href="#">menu</a>
+              <li>
+                <a class="color_animation" href="#">Menu</a>
               </li>
-              <li class="nav-item">
-                <a class="color_animation" href="#">drinks</a>
+              <li>
+                <a class="color_animation" href="#">Drinks</a>
               </li>
-              <li class="nav-item">
-                <a class="color_animation" href="#">reservation</a>
+              <li>
+                <a class="color_animation" href="#">Reservations</a>
               </li>
-              <li class="nav-item">
-                <a class="color_animation" href="#">contact us</a>
+              <li>
+                <a class="color_animation" href="#">Contact Us</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
-    </nav> -->
+    </nav>
+
     <!-- Restaurant title, subtitle -->
     <div id="top" class="starter_container bg">
       <div class="follow_container">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-m-6 col-md-offset-3">
           <h2 class="top-title">Restaurant</h2>
           <h2 class="white second-title">" Best in the city "</h2>
           <hr />
