menu and reservationn area html/css ready

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Restaurant</a>
+        <a class="navbar-brand" href="#top">Restaurant</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,16 +44,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav main-nav clear navbar-right">
             <li>
-              <a class="color_animation" href="#">about</a>
+              <a class="color_animation" href="#story">about</a>
             </li>
             <li>
-              <a class="color_animation" href="#">Menu</a>
+              <a class="color_animation" href="#pricing">Menu</a>
             </li>
             <li>
-              <a class="color_animation" href="#">Drinks</a>
+              <a class="color_animation" href="#drinks">Drinks</a>
             </li>
             <li>
-              <a class="color_animation" href="#">Reservations</a>
+              <a class="color_animation" href="#reservation">Reservations</a>
             </li>
             <li>
               <a class="color_animation" href="#">Contact Us</a>
@@ -93,18 +93,18 @@
               Lorem Ipsum.
             </p>
           </div>
-        
-        <hr />
-        <div class="col-md-6 mr-auto">
-          <div class="img-section">
-            <img src="images/kabob.jpg" width="250" height="220" />
-            <img src="images/limes.jpg" width="250" height="220" />
-            <div class="img-section-space"></div>
-            <img src="images/radish.jpg" width="250" height="220" />
-            <img src="images/corn.jpg" width="250" height="220" />
+
+          <hr />
+          <div class="col-md-6 mr-auto">
+            <div class="img-section">
+              <img src="images/kabob.jpg" width="250" height="220" />
+              <img src="images/limes.jpg" width="250" height="220" />
+              <div class="img-section-space"></div>
+              <img src="images/radish.jpg" width="250" height="220" />
+              <img src="images/corn.jpg" width="250" height="220" />
+            </div>
           </div>
         </div>
-      </div>
       </div>
     </section>
     <!-- Menu -->
@@ -129,14 +129,6 @@
                   <img src="images/food_icon01.jpg" alt="Food" />
                   <h2 class="white">$20</h2>
                 </li>
-                <li class="item main course">
-                  <img src="images/food_icon02.jpg" alt="Food" />
-                  <h2 class="white">$20</h2>
-                </li>
-                <li class="item main course">
-                  <img src="images/food_icon03.jpg" alt="Food" />
-                  <h2 class="white">$18</h2>
-                </li>
                 <li class="item appetizers">
                   <img src="images/food_icon04.jpg" alt="Food" />
                   <h2 class="white">$15</h2>
@@ -144,6 +136,14 @@
                 <li class="item appetizers">
                   <img src="images/food_icon05.jpg" alt="Food" />
                   <h2 class="white">$20</h2>
+                </li>
+                <li class="item main course">
+                  <img src="images/food_icon02.jpg" alt="Food" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item main course">
+                  <img src="images/food_icon03.jpg" alt="Food" />
+                  <h2 class="white">$18</h2>
                 </li>
                 <li class="item main course">
                   <img src="images/food_icon06.jpg" alt="Food" />
@@ -181,6 +181,205 @@
         </div>
       </div>
     </section>
+    <section id="drinks" class="description_content">
+      <div class="drinks background_content">
+        <h1><span>Enjoy</span> Our Drinks</h1>
+      </div>
+      <div class="text-content container">
+        <div class="container">
+          <div class="row">
+            <div id="w">
+              <ul id="filter-list" class="clearfix">
+                <li class="filter" data-filter="all">All</li>
+                <li class="filter" data-filter="cocktails">Cocktails</li>
+                <li class="filter" data-filter="beers">Beers</li>
+              </ul>
+              <!-- @end #filter-list -->
+              <ul id="portfolio">
+                <li class="item cocktails">
+                  <img src="images/0_pVTtTdJA65mVudPx.jpeg" alt="Drinks" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item cocktails">
+                  <img src="images/Cosmopolitan-cocktail_0.jpg" alt="Drinks" />
+                  <h2 class="white">$15</h2>
+                </li>
+                <li class="item cocktails">
+                  <img src="images/1442432590-delish-halloween-cocktails-sweet-poison.png" alt="Drinks" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item cocktails">
+                  <img src="images/Magical-Color-Changing-Cocktails-The-Flavor-Bender-Featured-Image-SQ-5-500x375.jpg" alt="Drinks" />
+                  <h2 class="white">$20</h2>
+                </li>
+                <li class="item cocktails">
+                  <img src="images/mojito-cocktails-814a3f7.jpg" alt="Drinks" />
+                  <h2 class="white">$18</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/Lagunitas-launches-non-alcoholic-IPNA-in-the-US_wrbm_large.jpg" alt="Drinks" />
+                  <h2 class="white">$22</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/Lonestar-Beer-Page.png" alt="Drinks" />
+                  <h2 class="white">$32</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/heinneken.png" alt="Drinks" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/gluten-free-beers-9.jpg" alt="Drinks" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/jakes-saffron-beer1.jpg" alt="Drinks" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item beers">
+                  <img src="images/ci-corona-extra-22d971897e230884.jpeg" alt="Drinks" />
+                  <h2 class="white">$38</h2>
+                </li>
+                <li class="item cocktails">
+                  <img src="images/tequila-sunrise-recipe-760754-19_preview-5b02f856119fa80037651942.jpeg" alt="Drinks" />
+                  <h2 class="white">$38</h2>
+                </li>
+              </ul>
+              <!-- @end #portfolio -->
+            </div>
+            <!-- @end #w -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ============ Reservation  ============= -->
+
+    <section id="reservation" class="description_content">
+      <div class="featured background_content">
+        <h1>Reserve a Table!</h1>
+      </div>
+      <div class="text-content container">
+        <div class="inner contact">
+          <!-- Form Area -->
+          <div class="contact-form">
+            <!-- Form -->
+            <form id="contact-us" method="post" action="reserve.php">
+              <!-- Left Inputs -->
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-8 col-md-6 col-xs-12">
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6 col-xs-6">
+                        <!-- Name -->
+                        <input
+                          type="text"
+                          name="first_name"
+                          id="first_name"
+                          required="required"
+                          class="form"
+                          placeholder="First Name"
+                        />
+                        <input
+                          type="text"
+                          name="last_name"
+                          id="last_name"
+                          required="required"
+                          class="form"
+                          placeholder="Last Name"
+                        />
+                        <input
+                          type="text"
+                          name="state"
+                          id="state"
+                          required="required"
+                          class="form"
+                          placeholder="State"
+                        />
+                        <input
+                          type="text"
+                          name="datepicker"
+                          id="datepicker"
+                          required="required"
+                          class="form"
+                          placeholder="Reservation Date"
+                        />
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-xs-6">
+                        <!-- Name -->
+                        <input
+                          type="text"
+                          name="phone"
+                          id="phone"
+                          required="required"
+                          class="form"
+                          placeholder="Phone"
+                        />
+                        <input
+                          type="text"
+                          name="guest"
+                          id="guest"
+                          required="required"
+                          class="form"
+                          placeholder="Guest Number"
+                        />
+                        <input
+                          type="email"
+                          name="email"
+                          id="email"
+                          required="required"
+                          class="form"
+                          placeholder="Email"
+                        />
+                        <input
+                          type="text"
+                          name="subject"
+                          id="subject"
+                          required="required"
+                          class="form"
+                          placeholder="Subject"
+                        />
+                      </div>
+
+                      <div class="col-xs-6">
+                        <!-- Send Button -->
+                        <button
+                          type="submit"
+                          id="submit"
+                          name="submit"
+                          class="text-center form-btn form-btn"
+                        >
+                          Reserve
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 col-xs-12">
+                    <!-- Message -->
+                    <div class="right-text">
+                      <h2>Hours</h2>
+                      <hr />
+                      <p>Monday to Friday: 7:30 AM - 11:30 AM</p>
+                      <p>Saturday & Sunday: 8:00 AM - 9:00 AM</p>
+                      <p>Monday to Friday: 12:00 PM - 5:00 PM</p>
+                      <p>Monday to Saturday: 6:00 PM - 1:00 AM</p>
+                      <p>Sunday to Monday: 5:30 PM - 12:00 AM</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Clear -->
+              <div class="clear"></div>
+            </form>
+          </div>
+          <!-- End Contact Form Area -->
+        </div>
+        <!-- End Inner -->
+      </div>
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
