--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a class="color_animation" href="#reservation">Reservations</a>
             </li>
             <li>
-              <a class="color_animation" href="#">Contact Us</a>
+              <a class="color_animation" href="#contact">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -205,11 +205,17 @@
                   <h2 class="white">$15</h2>
                 </li>
                 <li class="item cocktails">
-                  <img src="images/1442432590-delish-halloween-cocktails-sweet-poison.png" alt="Drinks" />
+                  <img
+                    src="images/1442432590-delish-halloween-cocktails-sweet-poison.png"
+                    alt="Drinks"
+                  />
                   <h2 class="white">$20</h2>
                 </li>
                 <li class="item cocktails">
-                  <img src="images/Magical-Color-Changing-Cocktails-The-Flavor-Bender-Featured-Image-SQ-5-500x375.jpg" alt="Drinks" />
+                  <img
+                    src="images/Magical-Color-Changing-Cocktails-The-Flavor-Bender-Featured-Image-SQ-5-500x375.jpg"
+                    alt="Drinks"
+                  />
                   <h2 class="white">$20</h2>
                 </li>
                 <li class="item cocktails">
@@ -217,7 +223,10 @@
                   <h2 class="white">$18</h2>
                 </li>
                 <li class="item beers">
-                  <img src="images/Lagunitas-launches-non-alcoholic-IPNA-in-the-US_wrbm_large.jpg" alt="Drinks" />
+                  <img
+                    src="images/Lagunitas-launches-non-alcoholic-IPNA-in-the-US_wrbm_large.jpg"
+                    alt="Drinks"
+                  />
                   <h2 class="white">$22</h2>
                 </li>
                 <li class="item beers">
@@ -237,11 +246,17 @@
                   <h2 class="white">$38</h2>
                 </li>
                 <li class="item beers">
-                  <img src="images/ci-corona-extra-22d971897e230884.jpeg" alt="Drinks" />
+                  <img
+                    src="images/ci-corona-extra-22d971897e230884.jpeg"
+                    alt="Drinks"
+                  />
                   <h2 class="white">$38</h2>
                 </li>
                 <li class="item cocktails">
-                  <img src="images/tequila-sunrise-recipe-760754-19_preview-5b02f856119fa80037651942.jpeg" alt="Drinks" />
+                  <img
+                    src="images/tequila-sunrise-recipe-760754-19_preview-5b02f856119fa80037651942.jpeg"
+                    alt="Drinks"
+                  />
                   <h2 class="white">$38</h2>
                 </li>
               </ul>
@@ -379,7 +394,138 @@
         <!-- End Inner -->
       </div>
     </section>
+    <section class="social_connect">
+      <div class="text-content container row">
+        <div class="col-md-6">
+          <span class="social_heading">FOLLOW</span>
+          <ul class="social_icons">
+            <li>
+              <a
+                class="fab fa-twitter-square color_animation"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+            <li>
+              <a
+                class="fab fa-github-square color_animation"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+            <li>
+              <a
+                class="fab fa-linkedin color_animation"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+            <li><a 
+              class="fas fa-envelope-square color_animation" 
+              href="#">
+            </a></li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <span class="social_heading">OR DIAL</span>
+          <span class="social_info"
+            ><a class="color_animation" href="tel:347-870-7862"
+              >347-870-7862</a
+            ></span
+          >
+        </div>
+      </div>
+    </section>
 
+    <!-- ============ Contact Section  ============= -->
+
+    <section id="contact">
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3796.102076907902!2d-74.23318765148302!3d40.576428590670595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3b4b983223605%3A0x2d87b0dd5e31260b!2s60%20Sycamore%20St%2C%20Carteret%2C%20NJ%2007008!5e0!3m2!1sen!2sus!4v1611882903682!5m2!1sen!2sus"
+          width="100%"
+          height="450"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="inner contact">
+              <!-- Form Area -->
+              <div class="contact-form">
+                <!-- Form -->
+                <form id="contact-us" method="post" action="contact.php">
+                  <!-- Left Inputs -->
+                  <div class="col-md-6">
+                    <!-- Name -->
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      required="required"
+                      class="form"
+                      placeholder="Name"
+                    />
+                    <!-- Email -->
+                    <input
+                      type="email"
+                      name="email"
+                      id="email"
+                      required="required"
+                      class="form"
+                      placeholder="Email"
+                    />
+                    <!-- Subject -->
+                    <input
+                      type="text"
+                      name="subject"
+                      id="subject"
+                      required="required"
+                      class="form"
+                      placeholder="Subject"
+                    />
+                  </div>
+                  <!-- End Left Inputs -->
+                  <!-- Right Inputs -->
+                  <div class="col-md-6">
+                    <!-- Message -->
+                    <textarea
+                      name="message"
+                      id="message"
+                      class="form textarea"
+                      placeholder="Message"
+                    ></textarea>
+                  </div>
+                  <!-- End Right Inputs -->
+                  <!-- Bottom Submit -->
+                  <div class="relative fullwidth col-xs-12">
+                    <!-- Send Button -->
+                    <button
+                      type="submit"
+                      id="submit"
+                      name="submit"
+                      class="form-btn"
+                    >
+                      Send Message
+                    </button>
+                  </div>
+                  <!-- End Bottom Submit -->
+                  <!-- Clear -->
+                  <div class="clear"></div>
+                </form>
+              </div>
+              <!-- End Contact Form Area -->
+            </div>
+            <!-- End Inner -->
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
