--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav main-nav clear navbar-right">
             <li>
-              <a class="color_animation" href="#story">about</a>
+              <a class="color_animation" href="#story">About</a>
             </li>
             <li>
               <a class="color_animation" href="#pricing">Menu</a>
